@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 package org.elasticsearch.script.mustache;
 
@@ -13,6 +14,14 @@ import com.github.mustachejava.MustacheFactory;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.elasticsearch.ElasticsearchParseException;
+import org.elasticsearch.ExceptionsHelper;
+import org.elasticsearch.common.settings.Setting;
+import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.text.SizeLimitingStringWriter;
+import org.elasticsearch.common.unit.ByteSizeValue;
+import org.elasticsearch.common.unit.MemorySizeValue;
+import org.elasticsearch.core.Booleans;
 import org.elasticsearch.script.GeneralScriptException;
 import org.elasticsearch.script.Script;
 import org.elasticsearch.script.ScriptContext;
@@ -23,7 +32,7 @@ import org.elasticsearch.script.TemplateScript;
 import java.io.Reader;
 import java.io.StringReader;
 import java.io.StringWriter;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -32,7 +41,7 @@ import static org.elasticsearch.core.Strings.format;
 /**
  * Main entry point handling template registration, compilation and
  * execution.
- *
+ * <p>
  * Template handling is based on Mustache. Template handling is a two step
  * process: First compile the string representing the template, the resulting
  * {@link Mustache} object can then be re-used for subsequent executions.
@@ -45,6 +54,19 @@ public final class MustacheScriptEngine implements ScriptEngine {
     private static final Logger logger = LogManager.getLogger(MustacheScriptEngine.class);
 
     public static final String NAME = "mustache";
+
+    public static final Setting<ByteSizeValue> MUSTACHE_RESULT_SIZE_LIMIT = new Setting<>(
+        "mustache.max_output_size_bytes",
+        s -> "1mb",
+        s -> MemorySizeValue.parseBytesSizeValueOrHeapRatio(s, "mustache.max_output_size_bytes"),
+        Setting.Property.NodeScope
+    );
+
+    private final int sizeLimit;
+
+    public MustacheScriptEngine(Settings settings) {
+        sizeLimit = (int) MUSTACHE_RESULT_SIZE_LIMIT.get(settings).getBytes();
+    }
 
     /**
      * Compile a template string to (in this case) a Mustache object than can
@@ -65,7 +87,7 @@ public final class MustacheScriptEngine implements ScriptEngine {
             TemplateScript.Factory compiled = params -> new MustacheExecutableScript(template, params);
             return context.factoryClazz.cast(compiled);
         } catch (MustacheException ex) {
-            throw new ScriptException(ex.getMessage(), ex, Collections.emptyList(), templateSource, NAME);
+            throw new ScriptException(ex.getMessage(), ex, List.of(), templateSource, NAME);
         }
 
     }
@@ -86,10 +108,14 @@ public final class MustacheScriptEngine implements ScriptEngine {
         }
 
         if (options.containsKey(DETECT_MISSING_PARAMS_OPTION)) {
-            builder.detectMissingParams(Boolean.valueOf(options.get(DETECT_MISSING_PARAMS_OPTION)));
+            builder.detectMissingParams(getDetectMissingParamsOption(options));
         }
 
         return builder.build();
+    }
+
+    private static boolean getDetectMissingParamsOption(Map<String, String> options) {
+        return Booleans.parseBoolean(options.get(DETECT_MISSING_PARAMS_OPTION));
     }
 
     @Override
@@ -102,9 +128,9 @@ public final class MustacheScriptEngine implements ScriptEngine {
      * */
     private class MustacheExecutableScript extends TemplateScript {
         /** Factory template. */
-        private Mustache template;
+        private final Mustache template;
 
-        private Map<String, Object> params;
+        private final Map<String, Object> params;
 
         /**
          * @param template the compiled template object wrapper
@@ -117,10 +143,15 @@ public final class MustacheScriptEngine implements ScriptEngine {
 
         @Override
         public String execute() {
-            final StringWriter writer = new StringWriter();
+            StringWriter writer = new SizeLimitingStringWriter(sizeLimit);
             try {
                 template.execute(writer, params);
             } catch (Exception e) {
+                // size limit exception can appear at several places in the causal list depending on script & context
+                if (ExceptionsHelper.unwrap(e, SizeLimitingStringWriter.SizeLimitExceededException.class) != null) {
+                    // don't log, client problem
+                    throw new ElasticsearchParseException("Mustache script result size limit exceeded", e);
+                }
                 if (shouldLogException(e)) {
                     logger.error(() -> format("Error running %s", template), e);
                 }
